# gitHub-copilot-first-try

./: .aider.conf.yml  .dockerignore  .env.example  .gitignore  .mise.toml  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Containerfile  GEMINI.md  Makefile  README.md  SECURITY.md  app.py  compose.yaml  pyproject.toml  requirements.txt  slides.md
.cursor/rules/: 00-project.mdc
.devcontainer/: devcontainer.json
.github/: branch-protection.json  container-upstream-sha.txt  copilot-instructions.md  dependabot.yml  pull_request_template.md
.github/workflows/: branch-protection.yml  ci.yml  container-upstream-check.yml  takumi-guard.yml
docs/: agent-compatibility.md  architecture.md  design-philosophy.md  security-model.md  slide-design-rules.md
examples/bun/: index.ts
examples/deno/: main.ts
examples/go/: main.go
examples/java/: Main.java
examples/node/: index.mjs
scripts/: agent-entrypoint.sh  agent-smoke-test.sh  audit-host-security.sh  bootstrap-languages.sh  build-image.sh  check-container-engines.sh  check-github-actions-pinning.sh  check-prereqs.sh  check-sandbox-runtime-config.sh  compose-shell.sh  detect-container-engine.sh  export-image-artifacts.sh  export-slides-pdf.sh  install-agents.sh  install-host-tools-linux.sh  install-host-tools-macos.sh  lint-local.sh  polyglot-smoke-test.sh  repair-podman-machine-macos.sh  run-pre-commit.sh  run-sandbox.sh  setup-branch-protection.sh  smoke-test.sh  start-podman-machine-macos.sh  write-audit-log.sh
slides/: slides.md
tests/: conftest.py  test_api.py  test_scenarios.py
(+4 files in other folders)
